--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'VolvoNovum';
-    src: url('../../public/fonts/VolvoNovumTTF/VolvoNovum-Regular.ttf') format('truetype');
+    src: url('/fonts/VolvoNovumTTF/VolvoNovum-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: 'VolvoBroadPro';
-    src: url('../../public/fonts/VolvoBroadProDigital.woff') format('woff');
+    src: url('/fonts/VolvoBroadProDigital.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
